<?xml version="1.0" encoding="utf-8"?>
<!--  	Application: animovie
		Author: Wouter Eskens
		API: The Movie Database (TMDb)
		Database: SQLite 
		Course: Applied Computer Sciences
		School: Thomas More Kempen
		Year: 2013-2014 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Register">
    
	<EditText
        android:id="@+id/register_username"
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/register_username_label" />
    		
    <EditText
        android:id="@+id/register_email"
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/register_email_label" />
    		
    <EditText
        android:id="@+id/register_password"
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/register_password_label"/>
    
    <Button
        android:id="@+id/register_register"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_register"
        android:onClick="onClickRegister"/>
    
</LinearLayout>